# pipe-cxx

./: .gitignore  CMakeLists.txt  README.md
src/: UnixPipe.hxx  main.cxx
